add brand to store function created need to be tested
