# src/app.ts
@@ -8,6 +8,7 @@ import storeRoutes from './routes/store.routes';
 import brandRoutes from './routes/brand.routes';
 import locationRoutes from './routes/location.routes';
 import openingHoursRoutes from './routes/openingHours.routes';
+import storeBrandsRoutes from './routes/storeBrands.routes';
 import cors from 'cors';
 
 const app = express();
@@ -27,6 +28,8 @@ app.use('/api/llm', llmRoutes);
 app.use('/api/brands', brandRoutes);
 app.use('/api/locations', locationRoutes);
 app.use('/api/openinghours', openingHoursRoutes);
+app.use('/api/storebrands', storeBrandsRoutes);
+
 
 // Global error handler (should be after routes)
 app.use(errorHandler);
